# iris

./: .gitignore  .gitmodules  readme.org  run.sh
cloudlab-profiles/: README.md  dataset-profile.py
docker/: Dockerfile
docs/: 2024-10-09.architecture.org  2024-10-11.tasks.org  2024-10-14.check-in.org
final-paper/: Justfile  final-paper.org  readme.org  references.bib  template.latex
iris/: Cargo.toml  Dockerfile  compute_partitions.py
iris/scripts/: Dockerfile  compute_partitions.py  readme.org
iris/src/: architecture.rs  dataset.rs  main.rs
oak/: Cargo.toml  Dockerfile  Justfile  build.rs  experiments.csv  openapi.json  readme.org
oak/benches/: oak_benchmark.rs
oak/data/: .gitignore  siftsmall_experiments.csv
oak/scripts/: Dockerfile  readme.org
oak/src/: acorn.rs  architecture.rs  bitmask.rs  client.rs  dataset.rs  fvecs.rs  lib.rs  open_loop.rs  poisson.rs  predicate.rs  query.rs  router.rs  stubs.rs
proposal/: Justfile  proposal.org  readme.org  references.bib
scripts/get_sift/: .gitignore  Dockerfile  Justfile  readme.org  run.py  variable_predicates.py
scripts/graphs/: experiments.csv  latency_throughput_data.csv  requirements.txt  write_csv.py
scripts/graphs/siftsmall/: experiments.csv  experiments_long.csv
scripts/random_partitions/: readme.org
