[package]
name = "oak"
version = "0.1.0"
edition = "2021"

[features]
hnsw_faiss = []
hnsw_rust = ["dep:hnsw_rs"]
default = ["hnsw_faiss"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
memmap2 = "0.9.5"
rand = "0.8"
thiserror = "1.0.64"
byteorder = "1.5.0"
hnsw_rs = { version = "0.3.0", optional = true }
cxx = "1.0"
csv = "1.3.1"
dropshot = "0.13.0"
serde = "1.0.215"
schemars = "0.8.21"
http = "1.1.0"
tokio = { version = "1.0", features = ["full"] }
semver = "1.0.23"
slog = "2.7.0"
slog-scope = "4.4.0"

[build-dependencies]
cxx-build = "1.0"

